# Nexe-Agent-Intership-tasks-

./: README.md
.github/workflows/: deploy.yaml
advanced/autonomous_agent/: README.md  check_tasks.py
advanced/autonomous_agent/backend/: .env.example  .gitignore  database.py  main.py  models.py  requirements.txt  schemas.py  websocket.py
advanced/autonomous_agent/backend/agents/: executor.py  orchestrator.py  planner.py  reflector.py
advanced/autonomous_agent/frontend/: package-lock.json  package.json
advanced/autonomous_agent/frontend/app/: page.tsx
advanced/autonomous_agent/frontend/hooks/: useWebSocket.ts
advanced/autonomous_agent/frontend/store/: useAgentStore.ts
advanced/multi-agent-system/: README.md
advanced/multi-agent-system/backend/: main.py
advanced/multi-agent-system/backend/my_agents/: common.py  email_agent.py  manager.py  research_agent.py  summary_agent.py
advanced/multi-agent-system/frontend/: package-lock.json  package.json
advanced/multi-agent-system/frontend/app/: page.tsx
beginner/ai-calculator-agent/: README.md
beginner/ai-calculator-agent/backend/: agent.py  calculator_memory.db  main.py  memory.py
beginner/ai-calculator-agent/frontend/app/: page.tsx
beginner/tool-calling-agent/: README.md
beginner/tool-calling-agent/.github/workflows/: deploy.yaml
beginner/tool-calling-agent/backend/: Dockerfile  agent.py  main.py  requirements.txt
beginner/tool-calling-agent/frontend/app/: page.tsx
beginner/tool-calling-agent/tool_calling_agent_backend/: Dockerfile  README.md  agent.py  main.py  pyproject.toml  test_agent.py
(+1 files in other folders)
