[project]
name = "tool-calling-agent-backend"
version = "0.1.0"
description = "Backend for Tool-Calling AI Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "openai-agents",
    "openai",
]

[tool.uv]
dev-dependencies = []
